# py-gtfs-loader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runner.py  setup.py
.github/: CODEOWNERS
.github/workflows/: publish.yml  pull-request.yml
gtfs_loader/: __init__.py  lat_lon.py  schema.py  schema_classes.py  test_support.py  types.py
tests/: test_runner.py
tests/test_itineraries_unmodified/expected_default/: itinerary_cells.txt
tests/test_itineraries_unmodified/input/: itinerary_cells.txt  trips.txt
tests/test_unmodified/: README.md
tests/test_unmodified/expected_default/: stop_times.txt
