[project]
name = "py-gtfs-loader"
version = "0.3.0"
description = "Load GTFS"
readme = "README.md"
authors = [
    { name = "Jonathan Milot" },
    { name = "Jeremy Steele" }
]
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/TransitApp/py-gtfs-loader"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
